Tune xmx parameter.